app/redmine-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redmine-svc
spec:
  selector:
    app: redmine-deploy
  ports:
    - name: '80'
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
