app/redmine-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redmine-ingress
  labels:
    app.kubernetes.io/component: redmine
    app.kubernetes.io/instance: redmine
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    cert-manager.io/issuer: letsencrypt-campus
spec:
  tls:
    - hosts:
        - www.octo-redmine2.com
      secretName: www.octo-redmine2.com-tls
  rules:
    - host: www.octo-redmine2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redmine-svc
                port:
                  number: 80
